<resources>
    <string name="app_name">MusicPlayerAppAndroidKotlin</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favorite_btn">Favorite</string>
    <string name="playlist_btn">Playlist</string>
    <string name="total_song">Total Songs</string>
    <string name="world_of_music">World of music</string>
    <string name="song_name">Song Name</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">Loading..</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="feeback">Feeback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="song_album">Song Album</string>
</resources>